# ergon

./: .gitignore  BUG_ANALYSIS.md  Cargo.toml  Dockerfile.hybrid-ai-worker  IMPLEMENTATION.md  PIN_date.md  README.md  deadpool_redis.txt  docker-compose.hybrid-ai.yml  docker-compose.postgres.yml  docker-compose.workers.yml  macro_testing.md  test.md  test_incomplete_flows_fix.rs  test_timer_precision.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
ergon/: Cargo.toml  README.md
ergon/benches/: README.md  retryable_overhead.rs  system_bottlenecks.rs
ergon/data/: sales_2024_q1.csv  sales_2024_q2.csv  sales_2024_q3.csv
ergon/examples/: axum_order_processing.rs  axum_order_processing_redis.rs  backpressure_demo.rs  benchmark_inmemory.rs  benchmark_redis.rs  benchmark_sqlite.rs  child_flow_clean_api.rs  child_flow_custom_errors.rs  child_flow_custom_errors_redis.rs  child_flow_invocation.rs  child_flow_level2.rs  child_flow_level3.rs  child_flow_multi_worker.rs  child_flow_multi_worker_redis.rs  child_flow_timers.rs  comparison_etl_parallel.rs  comparison_etl_sequential.rs  complex_1_worker_dag_redis.rs  complex_1_worker_dag_sqlite.rs  complex_1_worker_sqlite.rs  complex_multi_worker_dag.rs  complex_multi_worker_dag_redis.rs  complex_multi_worker_dag_with_signals.rs  complex_multi_worker_dag_with_signals_redis.rs  complex_multi_worker_load.rs  comprehensive_demo.rs  comprehensive_demo_2.rs  comprehensive_demo_3.rs  comprehensive_redis_diagnostic.sh  concurrent_segmented_sieve.rs  cpu_intensive_example.rs  crash_recovery_demo.rs  crash_recovery_demo_manual.rs  crash_recovery_demo_sqlite.rs  custom_error_boxed.rs  custom_error_types.rs  custom_retry_policy.rs  dag_error_retry.rs  dag_limit.rs  dag_limit_parallel.rs  (+92 more)
ergon/examples/hybrid_ai_distributed/: README.md  flows.rs  scheduler.rs  worker.rs
ergon/src/: lib.rs
ergon/src/core/: error.rs  flow_type.rs  invocation.rs  mod.rs  retry.rs  serialization.rs
ergon/src/executor/: child_flow.rs  context.rs  dag.rs  error.rs  execution.rs  flow_context.rs  flow_executor.rs  graph_executor.rs  instance.rs  mod.rs  retry_helper.rs  scheduler.rs  signal.rs  timer.rs  timer_processor.rs  worker.rs  worker_before_extraction.rs  worker_old.txt
ergon/src/graph/: error.rs  flow_graph.rs  mod.rs  step_id.rs
ergon/src/storage/: error.rs  memory.rs  mod.rs  params.rs  postgres.rs  queue.rs  redis.rs  sqlite.rs
ergon/tests/: timer_basic_test.rs
ergon_macros/: Cargo.toml  README.md
ergon_macros/src/: dag.rs  determinism.rs  ergon_macros.rs  flow.rs  flow_type.rs  lib.rs  parsing.rs  step.rs
ergon_macros/tests/: ui.rs
ergon_macros/tests/ui/: flow_not_async.rs  flow_not_async.stderr  flow_valid.rs  step_not_async.rs  step_not_async.stderr  step_valid.rs
