[workspace]
members = [
    "ergon",
    "ergon_macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["LLM Agents Team"]
repository = "https://github.com/yourusername/ergon"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Error handling
thiserror = "2.0"

# IDs and time
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
seahash = "4.1"

# Macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Examples (web framework for examples only)
axum = "0.8.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
deadpool-redis = "0.18"

# Async
async-trait = "0.1"

# Graph
petgraph = "0.8"

# Concurrency
dashmap = "6.1"

# Testing
lazy_static = "1.4"
futures = "0.3"

# Internal crates
ergon_macros = { path = "ergon_macros" }
