[package]
name = "ergon"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["LLM Agents Team"]
repository = "https://github.com/richinex/ergon"
description = "Ergon: Durable execution framework inspired by Temporal"
keywords = ["workflow", "durable-execution", "dag", "temporal", "ergon"]
categories = ["asynchronous", "workflow"]

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]
postgres = ["dep:sqlx"]
redis = ["dep:redis", "dep:deadpool-redis"]

[dependencies]
# Core dependencies
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
seahash = { workspace = true }
base64 = { workspace = true }

# Storage dependencies
async-trait = { workspace = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

# Graph dependencies
petgraph = { workspace = true }

# Executor dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }

# Proc-macros
ergon_macros = { path = "../ergon_macros" }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serial_test = "3.3.1"
criterion = { version = "0.8", features = ["html_reports"] }

# Example configurations with required features
[[example]]
name = "distributed_redis"
required-features = ["redis"]

[[example]]
name = "distributed_redis_demo"
required-features = ["redis"]

[[example]]
name = "crash_recovery_demo"
required-features = ["redis"]

[[example]]
name = "benchmark_redis"
required-features = ["redis"]

[[example]]
name = "axum_order_processing_redis"
required-features = ["redis"]

[[example]]
name = "distributed_worker_timer_redis"
required-features = ["redis"]

[[example]]
name = "distributed_worker_timer_tracing_redis"
required-features = ["redis"]

[[example]]
name = "complex_1_worker_dag_redis"
required-features = ["redis"]


[[example]]
name = "timer_race_condition_redis"
required-features = ["redis"]

[[example]]
name = "observability_demo"


[[example]]
name = "external_signal_abstraction_redis"
required-features = ["redis"]


[[example]]
name = "axum_order_processing"
required-features = ["sqlite"]


[[example]]
name = "dag_limit_sequential"

[[example]]
name = "write_db_sequential"
required-features = ["sqlite"]

[[example]]
name = "write_db_parallel"
required-features = ["sqlite"]

[[example]]
name = "hybrid_ai_postgres"
required-features = ["postgres"]

[[example]]
name = "hybrid_ai_redis"
required-features = ["redis"]

[[example]]
name = "hybrid_ai_memory"

[[example]]
name = "hybrid_ai_distributed_scheduler"
path = "examples/hybrid_ai_distributed/scheduler.rs"
required-features = ["postgres"]

[[example]]
name = "hybrid_ai_distributed_worker"
path = "examples/hybrid_ai_distributed/worker.rs"
required-features = ["postgres"]

[[bench]]
name = "retryable_overhead"
harness = false

[[bench]]
name = "system_bottlenecks"
harness = false
