[package]
name = "ergon_macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["LLM Agents Team"]
repository = "https://github.com/yourusername/ergon"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
