[package]
name = "ergon_macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
authors = ["LLM Agents Team"]
repository = "https://github.com/richinex/ergon"
description = "Procedural macros for the Ergon durable execution framework"
keywords = ["workflow", "macros", "ergon"]
categories = ["asynchronous"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
ergon = { path = "../ergon" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
seahash = "4.1"
